--- a/Page-1.html
+++ b/Page-1.html
@@ -1,111 +1,175 @@
 <html>
 
 <head>
-    <title>
-        Keychain Info
-    </title>
+    <title>.. Key Chain ..</title>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 
+
 <body>
-<table class="greenTable">
-    <tfoot>
-    <tr>
-    <td colspan="2">
-    <div class="links">Please contact if you belive the key is lost!</div>
-    </td>
-    </tr>
-    </tfoot>
-    <tbody>
-    <tr>
+
+
+
+  <h1> Keychain QR Code </h1>
+<table class="rwd-table">
+  <tr>
+    <th>Please Contact If This Key Is Lost!</th>
+  </tr>
+  
+  
+  <tr>
     <td>Car</td>
-    <td>CAR_HERE</td>
-    </tr>
+    <td>Nissan Armada</td>
+  </tr>
+  
     <tr>
     <td>Color</td>
-    <td>COLOR</td>
-    </tr>
+    <td>Black</td>
+  </tr>
+  
     <tr>
     <td>License Plate</td>
-    <td>PLATE</td>
-    </tr>
+    <td> 17 - 57495</td>
+  </tr>
+  
     <tr>
     <td>Name</td>
-    <td>NAME_HERE</td>
-    </tr>
-    <tr>
-    <td>Mobile No.</td>
-    <td>NUMBER</td>
-    </tr>
+    <td>Faisal Mohammed</td>
+  </tr>
+  
     <tr>
     <td>P.O Box</td>
-    <td>PO.BOX</td>
-    </tr>
-    </tbody>
-    </table>
+    <td>32260</td>
+  </tr>
+  
+    <tr>
+    <td>Mobile Number</td>
+    <td><a id="Num" href="tel:+971557244359">+971 55 7244 359</a></td>
+  </tr>
+
+
+
+</table>
 
 
 
 
-    <style>
-        table.greenTable {
-  font-family: Verdana, Geneva, sans-serif;
-  border: 5px solid #24943A;
-  background-color: #D4EED1;
-  width: 100%;
-  text-align: center;
+
+
+<script>
+
+
+</script>
+
+
+<style>
+
+@import "http://fonts.googleapis.com/css?family=Montserrat:300,400,700";
+.rwd-table {
+  margin: 1em 0;
+  width: 40%;
 }
-table.greenTable td, table.greenTable th {
-  border: 1px solid #24943A;
-  padding: 10px 10px;
+.rwd-table tr {
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
 }
-table.greenTable tbody td {
-  font-size: 13px;
+.rwd-table th {
+  display: none;
 }
-table.greenTable tfoot {
-  font-size: 13px;
+.rwd-table td {
+  display: block;
+}
+.rwd-table td:first-child {
+  padding-top: .5em;
+}
+.rwd-table td:last-child {
+  padding-bottom: .5em;
+}
+.rwd-table td:before {
+  content: attr(data-th) ": ";
   font-weight: bold;
-  color: #F0F0F0;
-  background: #24943A;
-  background: -moz-linear-gradient(top, #5baf6b 0%, #3a9e4d 66%, #24943A 100%);
-  background: -webkit-linear-gradient(top, #5baf6b 0%, #3a9e4d 66%, #24943A 100%);
-  background: linear-gradient(to bottom, #5baf6b 0%, #3a9e4d 66%, #24943A 100%);
-  border-top: 1px solid #24943A;
+  width: 6.5em;
+  display: inline-block;
 }
-table.greenTable tfoot td {
-  font-size: 13px;
+@media (min-width: 480px) {
+  .rwd-table td:before {
+    display: none;
+  }
 }
-table.greenTable tfoot .links {
+.rwd-table th, .rwd-table td {
+  text-align: left;
+}
+@media (min-width: 480px) {
+  .rwd-table th, .rwd-table td {
+    display: table-cell;
+    padding: .25em .5em;
+  }
+  .rwd-table th:first-child, .rwd-table td:first-child {
+    padding-left: 0;
+  }
+  .rwd-table th:last-child, .rwd-table td:last-child {
+    padding-right: 0;
+  }
+}
+
+body {
+  padding: 0 2em;
+  font-family: Montserrat, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  color: #444;
+  background: #eee;
   text-align: center;
 }
-table.greenTable tfoot .links a{
-  display: inline-block;
-  background: #FFFFFF;
-  color: #24943A;
-  padding: 2px 8px;
-  border-radius: 5px;
+
+h1 {
+  font-weight: normal;
+  letter-spacing: -1px;
+  color: #34495E;
+}
+
+.rwd-table {
+  background: #34495E;
+  color: #fff;
+  border-radius: .4em;
+  overflow: hidden;
+}
+.rwd-table tr {
+  border-color: #46627f;
+}
+.rwd-table th, .rwd-table td {
+  margin: .5em 1em;
+}
+@media (min-width: 480px) {
+  .rwd-table th, .rwd-table td {
+    padding: 1em !important;
+  }
+}
+.rwd-table th, .rwd-table td:before {
+  color: #dd5;
 }
 
 
 
 
-
-
-
-table{
-    margin: auto;
-
-margin-top: 22;
-    vertical-align: middle;
-    height: 100%;
+.rwd-table {
+  margin-left: 30%;
 }
-body {
- 
-    padding: 10%;
-    vertical-align: middle;
-    background-color: #39648d;
 
+#Num {
+  color: white;
 }
-    </style>
+
+</style>
+
+
+
+      
+      
+
+
 </body>
 
-    </html>
+
+</html>
