--- a/Page-1.html
+++ b/Page-1.html
@@ -49,7 +49,7 @@
         
 
 
-        <table class="table is-bordered is-narrow is-hoverable is-fullwidth">
+        <table class="ImageTable table is-bordered is-narrow is-hoverable is-fullwidth">
           <thead>
             <tr>
               <th colspan="2">Image Sample</th>
@@ -66,7 +66,7 @@
   </body>
 
   <style>
-    * {text-align: center !important;}
+    .ImageTable {text-align: center !important;}
   </style>
 
 </html>
