--- a/Page-1.html
+++ b/Page-1.html
@@ -38,7 +38,7 @@
           </tr>
           <tr>
             <td>Mobile Number</td>
-            <td>+971 55 7244 359</td>
+            <td><a href="tel:+971557244359">+971 55 7244 359</a></td>
           </tr>
         </tbody>
         </table>
