--- a/Page-1.html
+++ b/Page-1.html
@@ -12,7 +12,7 @@
      <table class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
         <thead>
           <tr>
-            <th colspan="2">Please Contact If The Key Is Lost!</th>
+            <th id="MainThead" colspan="2">Please Contact If The Key Is Lost!</th>
           </tr>
         </thead>
         <tbody>
@@ -66,7 +66,7 @@
   </body>
 
   <style>
-    .ImageTable {text-align: center !important;}
+    .ImageTable , #MainThead {text-align: center !important; color:red}
   </style>
 
 </html>
