--- a/Page-1.html
+++ b/Page-1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello Bulma!</title>
+    <title>Car Keychain</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   </head>
   <body >
@@ -26,7 +26,7 @@
           </tr>
           <tr>
             <td>License Plate</td>
-            <td>17 - 57495</td>
+            <td><strong>17</strong> - 57495</td>
           </tr>
           <tr>
             <td>Name</td>
