--- a/Page-1.html
+++ b/Page-1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="has-background-primary">
+<html class="Html has-background-primary">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -67,6 +67,8 @@
 
   <style>
     .ImageTable , #MainThead {text-align: center !important; color:red}
+
+    .Html {background-color: #485fc7!important;}
   </style>
 
 </html>
