--- a/Page-1.html
+++ b/Page-1.html
@@ -17,27 +17,27 @@
         </thead>
         <tbody>
           <tr>
-            <td>Car</td>
+            <td class="propertyItem">Car</td>
             <td>Nissan Armada</td>
           </tr>
           <tr>
-            <td>Color</td>
+            <td class="propertyItem">Color</td>
             <td>Black</td>
           </tr>
           <tr>
-            <td>License Plate</td>
+            <td class="propertyItem">License Plate</td>
             <td>57495 - 17</td>
           </tr>
           <tr>
-            <td>Name</td>
+            <td class="propertyItem">Name</td>
             <td>Faisal Mohammed</td>
           </tr>
           <tr>
-            <td>P.O Box</td>
+            <td class="propertyItem">P.O Box</td>
             <td>32260</td>
           </tr>
           <tr>
-            <td>Mobile Number</td>
+            <td class="propertyItem">Mobile Number</td>
             <td><a href="tel:+971557244359">+971 55 7244 359</a></td>
           </tr>
         </tbody>
@@ -69,6 +69,8 @@
     .ImageTable , #MainThead {text-align: center !important; color:red}
 
     .Html {background-color: #485fc7!important;}
+
+    .propertyItem {font-weight: bold}
   </style>
 
 </html>
