--- a/Page-1.html
+++ b/Page-1.html
@@ -41,7 +41,7 @@
             <td><a href="tel:+971557244359">+971 55 7244 359</a></td>
           </tr>
           <td class="propertyItem">WhatsApp</td>
-          <td><a href="https://api.whatsapp.com/send/?phone=00971557244359&text=Hello%2C+I+found+the+car+key.....&type=phone_number&app_absent=0">Click Me!</a></td>
+          <td><a href="https://api.whatsapp.com/send?phone=971557244359&text=Hi%2C%20I%20found%20the%20key!..">Click Me!</a></td>
         </tr>
         </tbody>
         </table>
