--- a/Page-1.html
+++ b/Page-1.html
@@ -12,7 +12,7 @@
      <table class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
         <thead>
           <tr>
-            <th id="MainThead" colspan="2">Please Contact If The Key Is Lost!</th>
+            <th class="TitleHead" colspan="2">Please Contact If The Key Is Lost!</th>
           </tr>
         </thead>
         <tbody>
@@ -55,7 +55,7 @@
         <table class="ImageTable table is-bordered is-narrow is-hoverable is-fullwidth">
           <thead>
             <tr>
-              <th colspan="2">Image Sample</th>
+              <th class="TitleHead" colspan="2">Image Sample</th>
             </tr>
           </thead>
           <tbody>
@@ -69,7 +69,9 @@
   </body>
 
   <style>
-    .ImageTable , #MainThead {text-align: center !important; color:red}
+    .ImageTable {text-align: center !important}
+
+    .TitleHead {text-align: center !important; color:red}
 
     .Html {background-color: #485fc7!important;}
 
