--- a/Page-1.html
+++ b/Page-1.html
@@ -71,7 +71,7 @@
   <style>
     .ImageTable {text-align: center !important}
 
-    .TitleHead {text-align: center !important; color:red}
+    .TitleHead {text-align: center !important; color:red !important}
 
     .Html {background-color: #485fc7!important;}
 
