--- a/Faisal-cv.html
+++ b/Faisal-cv.html
@@ -104,7 +104,7 @@
     <div class="container">
         <section>
             <h2 class="section-title">Professional Summary</h2>
-            <p>IT Specialist with 7+ years in systems troubleshooting, network management, and IT project coordination. Adept at optimizing technology solutions and driving operational efficiency through strategic implementation and proactive problem-solving.</p>
+            <p>Experienced IT Specialist adept at troubleshooting systems, managing networks, and coordinating IT projects to optimize operational efficiency.</p>
         </section>
 
         <section>
@@ -113,33 +113,47 @@
                 <div class="timeline-entry">
                     <h4>Telecommunications Technician</h4>
                     <p><em>Luxury Castle General Maintenance & Contracting LLC, UAE - Abu Dhabi (11/19 - Present)</em></p>
-                    <p>In this role, I have taken on a diverse set of responsibilities, ranging from coordinating maintenance and repair projects between property owners and company departments to overseeing the administration of network systems. I have consistently provided expert technical support, led training initiatives, and ensured the continuous enhancement of our IT infrastructure, all while managing the deployment and maintenance of company assets and driving cost-effective solutions through supplier negotiations.</p>
+                    <p>Supervised network systems and deployed company IT assets. Provided technical support, led website development, and coordinated IT-related tasks across departments.</p>
                     <ul>
-                        <li>Coordinated maintenance and repair projects between property owners and internal departments, ensuring smooth communication and timely completion of tasks.</li>
-                        <li>Overhauled network systems, reducing downtime by 20% and significantly improving team productivity.</li>
-                        <li>Administered IT infrastructure, including deploying and maintaining company computer assets.</li>
-                        <li>Provided expert technical support and led training sessions, achieving a 90% satisfaction rate among end-users.</li>
-                        <li>Optimized operational costs by negotiating favorable agreements with suppliers and vendors.</li>
-                        <li>Designed, developed, and maintained the corporate website, enhancing digital presence and accessibility.</li>
-                        <li>Executed all telecommunications and IT-related tasks efficiently, ensuring alignment with organizational goals.</li>
+                        <li>Coordinate maintenance, repairs, and projects between property owners and company departments.</li>
+                        <li>Overhauled network systems, reducing downtime by 20% and increasing team productivity.</li>
+                        <li>Managed deployment and maintenance of company computer assets.</li>
+                        <li>Provided tech support and training with 98% end-user satisfaction.</li>
+                        <li>Led supplier negotiations to secure favorable pricing.</li>
+                        <li>Efficiently managed telecommunication and IT tasks.</li>
+                        <li>Led corporate website development and maintenance.</li>
                     </ul>
                 </div>
                 <div class="timeline-entry">
                     <h4>IT Coordinator</h4>
                     <p><em>Secure Engineering LLC, UAE - Abu Dhabi (03/16 - 05/19)</em></p>
-                    <p>As the IT Coordinator, I was responsible for managing and maintaining all technology systems. My technical skills and ability to communicate with stakeholders allowed me to effectively handle the challenges of this role and improve efficiency through the implementation of new technology solutions.</p>
+                    <p>Managed daily IT operations, system troubleshooting, and network maintenance to ensure seamless functionality. Delivered technical support and implemented efficient IT solutions for internal and external projects.</p>
                     <ul>
-                        <li>Managed and configured IT systems, achieving a 30% increase in uptime and reducing troubleshooting time by 25%.</li>
-                        <li>Implemented robust cybersecurity measures, reducing unauthorized access incidents by 40%.</li>
-                        <li>Provisioned, configured, and maintained computer systems and networks to ensure optimal performance and reliability.</li>
-                        <li>Diagnosed and rectified hardware and software malfunctions promptly, achieving a 95% resolution rate.</li>
-                        <li>Developed and deployed software applications and infrastructure components, ensuring alignment with business needs.</li>
-                        <li>Provided comprehensive training sessions to staff, enhancing their proficiency in new technologies and tools.</li>
-                        <li>Fostered strong partnerships with clients, suppliers, and internal stakeholders to streamline operations and enhance collaboration.</li>
-                        <li>Conducted in-depth analysis of customer and market insights, delivering actionable reports to senior management.</li>
+                        <li>Managed and configured IT systems, boosting uptime by 30% and cutting troubleshooting time by 25%.</li>
+                        <li>Deployed and optimized software applications and infrastructure components.</li>
+                        <li>Implemented strong cybersecurity measures, reducing unauthorized access incidents.</li>
+                        <li>Assisted in network environment administration and maintenance.</li>
+                        <li>Collaborated with IT colleagues on internal and client initiatives.</li>
+                        <li>Diagnosed and resolved hardware and software issues promptly.</li>
+                        <li>Conducted staff training on new technologies and tools.</li>
+                        <li>Fostered partnerships with clients, suppliers, and stakeholders.</li>
+                        <li>Analyzed customer and market insights, providing actionable reports for management.</li>
                     </ul>
                 </div>
             </div>
+        </section>
+
+        <section>
+            <h2 class="section-title">Projects</h2>
+            <ul>
+                <li>IT Infrastructure Setup and Optimization: Spearheaded IT infrastructure development, achieving a 30% reduction in downtime.</li>
+                <li>Website Development: Increased traffic by 50% and improved loading speed by 40% with optimized SEO techniques.</li>
+                <li>Network Security Enhancement: Conducted security audits and implemented advanced firewall configurations.</li>
+                <li>Customer Relationship Management (CRM) Integration: Streamlined client interactions and sales pipeline tracking.</li>
+                <li>ERP System Implementation: Oversaw deployment, vendor coordination, and staff training.</li>
+                <li>Document Management System: Improved document retrieval and compliance with a centralized system.</li>
+                <li>Social Media Campaign Management: Achieved a 60% engagement increase across Instagram, Facebook, and LinkedIn.</li>
+            </ul>
         </section>
 
         <section>
@@ -151,34 +165,34 @@
         <section>
             <h2 class="section-title">Languages</h2>
             <ul>
-                <li>Arabic: Native</li>
-                <li>English: Excellent</li>
+                <li>Arabic: Native proficiency</li>
+                <li>English: Excellent reading, writing, and speaking skills</li>
             </ul>
         </section>
 
         <section>
             <h2 class="section-title">Technical Certifications</h2>
             <ul>
-                <li>Google IT Professional Support Certificate (5 Courses) - 2021</li>
-                <li>Oracle SQL Databases Specialization (4 Courses) - 2021</li>
-                <li>Integrated Management System Internal Auditor - 2018</li>
-                <li>Risk Management & Internal Controls - 2018</li>
-                <li>IMS Awareness Training - 2017</li>
+                <li>Google LLC - IT Professional Support Certificate (5 Courses) - 2021</li>
+                <li>LearnQuest - Oracle SQL Databases Specialization (4 Courses) - 2021</li>
             </ul>
         </section>
 
         <section>
             <h2 class="section-title">Courses</h2>
             <ul>
-                <li>Oracle Database Foundations - LearnQuest, 2021</li>
-                <li>Oracle Database Platform - LearnQuest, 2021</li>
-                <li>Oracle SQL Basics - LearnQuest, 2021</li>
-                <li>Oracle SQL Proficiency - LearnQuest, 2021</li>
-                <li>Technical Support Fundamentals - Google, 2021</li>
-                <li>The Bits and Bytes of Computer Networking - Google, 2021</li>
-                <li>System Administration and IT Infrastructure Services - Google, 2021</li>
-                <li>Operating Systems and You: Becoming a Power User - Google, 2021</li>
-                <li>IT Security: Defense Against the Digital Dark Arts - Google, 2021</li>
+                <li>Oracle Database Foundations, Learn Quest, 2021</li>
+                <li>Oracle Database Platform, Learn Quest, 2021</li>
+                <li>Oracle SQL Basics, Learn Quest, 2021</li>
+                <li>Oracle SQL Proficiency, Learn Quest, 2021</li>
+                <li>Technical Support Fundamentals, Google 2021</li>
+                <li>The Bits and Bytes of Computer Networking, Google 2021</li>
+                <li>System Administration and IT Infrastructure Services, Google 2021</li>
+                <li>Operating Systems and You: Becoming a Power User, Google 2021</li>
+                <li>IT Security: Defense Against the Digital Dark Arts, Google 2021</li>
+                <li>Risk Management & Internal Controls, Secure Engineering 2018</li>
+                <li>IMS Awareness Training, Red Sea Consultancy 2017</li>
+                <li>Integrated Management System Internal Auditor, Orient Management Consulting & Training, 2018</li>
             </ul>
         </section>
 
@@ -186,19 +200,22 @@
             <h2 class="section-title">Key Skills</h2>
             <div class="row row-cols-1 row-cols-md-3 g-3">
                 <div class="col">
-                    <div class="skill-card">System Troubleshooting</div>
+                    <div class="skill-card">Project Coordination & Management</div>
                 </div>
                 <div class="col">
-                    <div class="skill-card">Network Management</div>
+                    <div class="skill-card">Social Media & Advertising Campaigns</div>
                 </div>
                 <div class="col">
-                    <div class="skill-card">Project Coordination</div>
+                    <div class="skill-card">Windows OS Expertise</div>
                 </div>
                 <div class="col">
-                    <div class="skill-card">Social Media Management</div>
+                    <div class="skill-card">Microsoft Office Suite</div>
                 </div>
                 <div class="col">
-                    <div class="skill-card">Programming: JavaScript, PHP, HTML, CSS</div>
+                    <div class="skill-card">Network Maintenance</div>
+                </div>
+                <div class="col">
+                    <div class="skill-card">Programming Basics: JavaScript, C#, PHP, HTML, CSS</div>
                 </div>
                 <div class="col">
                     <div class="skill-card">WordPress Development</div>
@@ -213,13 +230,10 @@
                     <div class="skill-card">Videography & Editing</div>
                 </div>
                 <div class="col">
-                    <div class="skill-card">Risk Management</div>
+                    <div class="skill-card">Automation for Efficiency</div>
                 </div>
                 <div class="col">
-                    <div class="skill-card">Cybersecurity</div>
-                </div>
-                <div class="col">
-                    <div class="skill-card">Process Automation</div>
+                    <div class="skill-card">Analytical Problem-Solving</div>
                 </div>
             </div>
         </section>
@@ -227,15 +241,19 @@
         <section>
             <h2 class="section-title">Interests</h2>
             <ul>
-                <li>Project Management and Organization</li>
-                <li>IT Project Management and Strategic Asset Management</li>
-                <li>Exploring IoT Advancements and Cybersecurity Trends</li>
-                <li>Leadership and Teamwork</li>
-                <li>Creative Problem-Solving</li>
-                <li>Stakeholder Engagement and Relationship Management</li>
-                <li>Gaming and E-sports</li>
-                <li>Reading and Literature</li>
+                <li>Project management and organization</li>
+                <li>Exploring IoT advancements and cybersecurity trends</li>
+                <li>Leadership and teamwork</li>
+                <li>Creative problem-solving</li>
+                <li>Stakeholder engagement and relationship management</li>
+                <li>Gaming and e-sports</li>
+                <li>Reading and literature</li>
             </ul>
+        </section>
+
+        <section>
+            <h2 class="section-title">References</h2>
+            <p>Available upon request.</p>
         </section>
     </div>
     <footer>
