--- a/Faisal-cv.html
+++ b/Faisal-cv.html
@@ -12,12 +12,12 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
+            background-color: #fff5f7;
             color: #333;
         }
 
         header {
-            background-color: #007BFF;
+            background-color: #e63946;
             color: white;
             padding: 20px;
             text-align: center;
@@ -35,14 +35,14 @@
 
         .section-title {
             margin-top: 20px;
-            color: #007BFF;
-            border-bottom: 2px solid #007BFF;
+            color: #e63946;
+            border-bottom: 2px solid #e63946;
             padding-bottom: 5px;
             font-size: 1.5em;
         }
 
         .timeline {
-            border-left: 3px solid #007BFF;
+            border-left: 3px solid #e63946;
             margin: 20px 0;
             padding: 10px;
             position: relative;
@@ -55,7 +55,7 @@
             top: 0;
             bottom: 0;
             width: 3px;
-            background: #007BFF;
+            background: #e63946;
         }
 
         .timeline-entry {
@@ -71,7 +71,7 @@
             top: 0;
             width: 10px;
             height: 10px;
-            background-color: #007BFF;
+            background-color: #e63946;
             border-radius: 50%;
         }
 
@@ -82,9 +82,9 @@
         }
 
         .skill-card {
-            border: 1px solid #007BFF;
+            border: 1px solid #e63946;
             border-radius: 10px;
-            background-color: #eaf3ff;
+            background-color: #ffe5e9;
             padding: 15px;
             text-align: center;
             transition: transform 0.3s;
