--- a/Faisal-cv.html
+++ b/Faisal-cv.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -88,10 +89,27 @@
             padding: 15px;
             text-align: center;
             transition: transform 0.3s;
+            height: 100px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
         }
 
         .skill-card:hover {
             transform: scale(1.05);
+        }
+
+        .row-cols-md-3 .col {
+            display: flex;
+            align-items: stretch;
+            justify-content: center;
+        }
+
+        .row-cols-md-3 .col > .skill-card {
+            width: 100%;
         }
     </style>
 </head>
