--- a/Faisal-cv.html
+++ b/Faisal-cv.html
@@ -116,8 +116,8 @@
 <body>
     <header>
         <h1>Faisal Mohammed</h1>
-        <p>UAE, Abu Dhabi | fms_q@outlook.com | 0557244359</p>
-        <p>Date of Birth: 12-Aug-1996</p>
+        <p>UAE, Abu Dhabi</p>
+        <p>Date of Birth: Aug-1996</p>
     </header>
     <div class="container">
         <section>
