--- a/F_Landing.html
+++ b/F_Landing.html
@@ -57,7 +57,7 @@
     <div class="landing-container">
         <div class="card">
             <h1>Faisal Mohammed</h1>
-            <p>IT Specialist | Project Manager | Dynamic Problem-Solver</p>
+            <p>IT Specialist | Project Manager | Dynamic & Flexible</p>
             <a href="https://wa.me/971557244359" class="btn btn-success btn-lg w-100" target="_blank"><i class="bi bi-whatsapp"></i> Contact on WhatsApp</a>
             <a href="https://www.linkedin.com/in/faisal-m-9351b2180" class="btn btn-primary btn-lg w-100" target="_blank"><i class="bi bi-linkedin"></i> Visit LinkedIn Profile</a>
             <!-- Replace BASE64_PDF_STRING below with your Base64-encoded PDF -->
