--- a/F_Landing.html
+++ b/F_Landing.html
@@ -287,12 +287,60 @@ const englishModalContent = `
 </table>
 
 <!-- Projects -->
-<h5 class="section-heading">Key Projects</h5>
+<h5 class="section-heading">Projects</h5>
 <table class="table table-bordered">
-    <tr><th>IT Infrastructure Optimization</th><td>Spearheaded server installation, network configuration, and system updates, improving efficiency by 25%</td></tr>
-    <tr><th>CRM & ERP Integration</th><td>Streamlined client interactions and sales tracking via CRM/ERP systems</td></tr>
-    <tr><th>Document Management System</th><td>Centralized file storage, reducing retrieval time by 35%</td></tr>
-    <tr><th>Social Media Campaigns</th><td>Increased engagement by 60% across Instagram, Facebook, and LinkedIn</td></tr>
+    <!-- IT Infrastructure Setup and Optimization -->
+    <tr><th>IT Infrastructure Setup and Optimization</th></tr>
+    <tr><td>
+        - Spearheaded development and optimization of company-wide IT infrastructure, comprising server installation, network configuration, and system updates<br>
+        - Achieved 30% reduction in downtime and enhanced system reliability via proactive maintenance and monitoring
+    </td></tr>
+
+    <!-- IT Support & User Training Program -->
+    <tr><th>IT Support & User Training Program</th></tr>
+    <tr><td>
+        - Provided IT support and training to enhance productivity and resolve technical issues<br>
+        - Achieved 90% issue resolution and increased satisfaction rate by 25%
+    </td></tr>
+
+    <!-- Website Development -->
+    <tr><th>Website Development</th></tr>
+    <tr><td>
+        - Developed company website with optimal SEO techniques, increasing traffic by 50% and improving loading speed by 40%
+    </td></tr>
+
+    <!-- Network Security Enhancement -->
+    <tr><th>Network Security Enhancement</th></tr>
+    <tr><td>
+        - Conducted network security audit and implemented advanced firewall configurations and antivirus solutions<br>
+        - Achieved compliance with industry security standards
+    </td></tr>
+
+    <!-- CRM Integration -->
+    <tr><th>Customer Relationship Management (CRM) Integration</th></tr>
+    <tr><td>
+        - Implemented and managed CRM system to streamline client interactions and sales pipeline tracking
+    </td></tr>
+
+    <!-- ERP System Implementation -->
+    <tr><th>ERP System Implementation</th></tr>
+    <tr><td>
+        - Led ERP system deployment for mid-sized organization, overseeing vendor coordination and staff training
+    </td></tr>
+
+    <!-- Document Management System Implementation -->
+    <tr><th>Document Management System Implementation</th></tr>
+    <tr><td>
+        - Implemented centralized electronic document management system for streamlined access and storage of project files<br>
+        - Improved document retrieval time and ensured compliance with organizational standards
+    </td></tr>
+
+    <!-- Social Media Campaign Management -->
+    <tr><th>Social Media Campaign Management</th></tr>
+    <tr><td>
+        - Developed and executed social media strategy on Instagram, Facebook, and LinkedIn for client brand awareness<br>
+        - Achieved 60% increase in engagement and lead generation
+    </td></tr>
 </table>
 
 <!-- Education -->
@@ -302,7 +350,7 @@ const englishModalContent = `
 </table>
 
 <!-- Certifications -->
-<h5 class="section-heading">Certifications</h5>
+<h5 class="section-heading">Technical Certifications</h5>
 <table class="table table-bordered">
     <tr><th>Google IT Professional Support (5 Courses)</th><td>Google LLC - 2021</td></tr>
     <tr><th>Oracle SQL Databases Specialization (4 Courses)</th><td>LearnQuest - 2021</td></tr>
@@ -312,11 +360,17 @@ const englishModalContent = `
 <h5 class="section-heading">Training Courses</h5>
 <table class="table table-bordered">
     <tr><th>Oracle Database Foundations</th><td>LearnQuest - 2021</td></tr>
+    <tr><th>Oracle Database Platform</th><td>LearnQuest - 2021</td></tr>
+    <tr><th>Oracle SQL Basics</th><td>LearnQuest - 2021</td></tr>
     <tr><th>Oracle SQL Proficiency</th><td>LearnQuest - 2021</td></tr>
     <tr><th>Technical Support Fundamentals</th><td>Google - 2021</td></tr>
-    <tr><th>IT Security: Defense Against Cyber Threats</th><td>Google - 2021</td></tr>
+    <tr><th>The Bits and Bytes of Computer Networking</th><td>Google - 2021</td></tr>
+    <tr><th>System Administration and IT Infrastructure Services</th><td>Google - 2021</td></tr>
+    <tr><th>Operating Systems and You: Becoming a Power User</th><td>Google - 2021</td></tr>
+    <tr><th>IT Security: Defense Against the Digital Dark Arts</th><td>Google - 2021</td></tr>
     <tr><th>Risk Management & Internal Controls</th><td>SECURE Engineering - 2018</td></tr>
-    <tr><th>IMS Internal Auditor Certification</th><td>Orient Management Consulting - 2018</td></tr>
+    <tr><th>IMS Awareness Training</th><td>Red Sea Consultancy - 2017</td></tr>
+    <tr><th>Integrated Management System Internal Auditor</th><td>Orient Management Consulting & Training - 2018</td></tr>
 </table>
 
 <!-- Languages -->
@@ -412,12 +466,60 @@ const arabicModalContent = `
 </table>
 
 <!-- المشاريع -->
-<h5 class="section-heading">المشاريع الرئيسية</h5>
+<h5 class="section-heading">المشاريع</h5>
 <table class="table table-bordered">
-    <tr><th>تحسين البنية التحتية لتقنية المعلومات</th><td>تركيب الخوادم وتهيئة الشبكات، مما حسن الكفاءة بنسبة 25٪</td></tr>
-    <tr><th>تكامل CRM و ERP</th><td>تبسيط تفاعلات العملاء عبر أنظمة CRM/ERP</td></tr>
-    <tr><th>نظام إدارة المستندات</th><td>خفض وقت استرجاع الملفات بنسبة 35٪</td></tr>
-    <tr><th>حملات وسائل التواصل الاجتماعي</th><td>زيادة التفاعل بنسبة 60٪ عبر إنستغرام وفيسبوك ولينكدإن</td></tr>
+    <!-- إعداد وتحسين البنية التحتية لتقنية المعلومات -->
+    <tr><th>إعداد وتحسين البنية التحتية لتقنية المعلومات</th></tr>
+    <tr><td>
+        - قاد تطوير وتحسين البنية التحتية لتقنية المعلومات على مستوى الشركة، بما في ذلك تركيب الخوادم، تكوين الشبكات، وتحديث الأنظمة<br>
+        - تحقيق انخفاض بنسبة 30٪ في وقت التوقف وتعزيز موثوقية النظام من خلال الصيانة والمراقبة الوقائية
+    </td></tr>
+
+    <!-- برنامج الدعم الفني وتدريب المستخدمين -->
+    <tr><th>برنامج الدعم الفني وتدريب المستخدمين</th></tr>
+    <tr><td>
+        - تقديم الدعم الفني والتدريب لتعزيز الإنتاجية وحل المشكلات التقنية<br>
+        - تحقيق نسبة 90٪ من حل المشكلات وزيادة معدل الرضا بنسبة 25٪
+    </td></tr>
+
+    <!-- تطوير الموقع الإلكتروني -->
+    <tr><th>تطوير الموقع الإلكتروني</th></tr>
+    <tr><td>
+        - تطوير موقع الشركة باستخدام تقنيات تحسين محركات البحث (SEO)، مما أدى إلى زيادة حركة المرور بنسبة 50٪ وتحسين سرعة التحميل بنسبة 40٪
+    </td></tr>
+
+    <!-- تعزيز أمان الشبكة -->
+    <tr><th>تعزيز أمان الشبكة</th></tr>
+    <tr><td>
+        - إجراء تدقيق أمان الشبكة وتنفيذ تكوينات جدار الحماية المتقدمة وحلول مكافحة الفيروسات<br>
+        - تحقيق الامتثال لمعايير أمان الصناعة
+    </td></tr>
+
+    <!-- تكامل نظام إدارة علاقات العملاء (CRM) -->
+    <tr><th>تكامل نظام إدارة علاقات العملاء (CRM)</th></tr>
+    <tr><td>
+        - تنفيذ وإدارة نظام CRM لتبسيط تفاعلات العملاء وتتبع خطوط المبيعات
+    </td></tr>
+
+    <!-- تنفيذ نظام تخطيط موارد المؤسسات (ERP) -->
+    <tr><th>تنفيذ نظام تخطيط موارد المؤسسات (ERP)</th></tr>
+    <tr><td>
+        - قاد نشر نظام ERP لمنظمة متوسطة الحجم، بما في ذلك تنسيق الموردين وتدريب الموظفين
+    </td></tr>
+
+    <!-- تنفيذ نظام إدارة المستندات -->
+    <tr><th>تنفيذ نظام إدارة المستندات</th></tr>
+    <tr><td>
+        - تنفيذ نظام إدارة مستندات إلكتروني مركزي لتبسيط الوصول إلى ملفات المشاريع وتخزينها<br>
+        - تحسين وقت استرجاع المستندات وضمان الامتثال لمعايير المنظمة
+    </td></tr>
+
+    <!-- إدارة حملات وسائل التواصل الاجتماعي -->
+    <tr><th>إدارة حملات وسائل التواصل الاجتماعي</th></tr>
+    <tr><td>
+        - تطوير وتنفيذ استراتيجية وسائل التواصل الاجتماعي على إنستغرام وفيسبوك ولينكدإن لزيادة الوعي بالعلامة التجارية للعميل<br>
+        - تحقيق زيادة بنسبة 60٪ في التفاعل وتوليد العملاء المحتملين
+    </td></tr>
 </table>
 
 <!-- التعليم -->
@@ -437,11 +539,17 @@ const arabicModalContent = `
 <h5 class="section-heading">الدورات التدريبية</h5>
 <table class="table table-bordered">
     <tr><th>أساسيات قواعد بيانات Oracle</th><td>LearnQuest - 2021</td></tr>
+    <tr><th>منصة قواعد بيانات Oracle</th><td>LearnQuest - 2021</td></tr>
+    <tr><th>أساسيات SQL</th><td>LearnQuest - 2021</td></tr>
     <tr><th>الإتقان في SQL</th><td>LearnQuest - 2021</td></tr>
     <tr><th>أساسيات الدعم الفني</th><td>جوجل - 2021</td></tr>
-    <tr><th>الأمن السيبراني</th><td>جوجل - 2021</td></tr>
+    <tr><th>مقدمة في شبكات الحاسوب</th><td>جوجل - 2021</td></tr>
+    <tr><th>إدارة الأنظمة والبنية التحتية لتقنية المعلومات</th><td>جوجل - 2021</td></tr>
+    <tr><th>أنظمة التشغيل: كيف تصبح مستخدمًا محترفًا</th><td>جوجل - 2021</td></tr>
+    <tr><th>الأمن السيبراني: الدفاع ضد التهديدات الرقمية</th><td>جوجل - 2021</td></tr>
     <tr><th>إدارة المخاطر والضوابط الداخلية</th><td>سيكيور الهندسية - 2018</td></tr>
-    <tr><th>تدقيق نظام ISO الداخلي</th><td>أورينت للإدارة - 2018</td></tr>
+    <tr><th>تدريب التوعية بنظام الإدارة المتكاملة (IMS)</th><td>ريد سي للاستشارات - 2017</td></tr>
+    <tr><th>مدقق داخلي لنظام الإدارة المتكاملة</th><td>أورينت للإدارة والتدريب - 2018</td></tr>
 </table>
 
 <!-- اللغات -->
