--- a/F_Landing.html
+++ b/F_Landing.html
@@ -668,7 +668,7 @@ const arabicModalContent = `
 
         // Download File Names
         ? "Faisal_Mohammed_CV_EN.pdf" 
-        : "Faisal_Mohammed_CV_EN.pdf";
+        : "Faisal_Mohammed_CV_AR.pdf";
 
       if (!currentCV) {
         alert(currentLanguage === "en" 
