--- a/F_Landing.html
+++ b/F_Landing.html
@@ -518,12 +518,12 @@
         وتنسيق المهام التقنية بين الأقسام.
     </td></tr>
     <tr><th>الإنجازات</th><td>
-        - نفذ إجراءات أمنية قوية للحد من حوادث الأمان المتعلقة بالوصول غير المصرح به.<br>
+        - تنفيذ إجراءات أمنية قوية للحد من حوادث الأمان المتعلقة بالوصول غير المصرح به.<br>
         - دعم وصيانة بيئة الشبكة بانتظام.<br>
         - تعاون مع فريق تقنية المعلومات لتنفيذ المشاريع الداخلية والخارجية.<br>
         - تشخيص وحل مشاكل الأجهزة والبرمجيات بسرعة وكفاءة.<br>
         - تركيب ومعايرة الأجهزة الطرفية لضمان التكامل السلس مع أنظمة الشركة.<br>
-        - أجرى برامج تدريبية للموظفين على التقنيات الحديثة لتعزيز الإنتاجية.<br>
+        - إجراء برامج تدريبية للموظفين على التقنيات الحديثة لتعزيز الإنتاجية.<br>
         - بناء علاقات قوية مع العملاء والموردين وأصحاب المصلحة.<br>
         - تحليل بيانات العملاء والسوق لتقديم تقارير وتوصيات استراتيجية للإدارة.
     </td></tr>
@@ -538,7 +538,9 @@
         - تنفيذ ميزات مخصصة تتجاوز الإضافات القياسية لتلبية احتياجات الأعمال المحددة.<br>
         - ضمان تصميم متجاوب للوصول السلس عبر جميع الأجهزة وأحجام الشاشات.<br>
         - مراقبة الأداء والأمان ووقت التشغيل مع تقديم تحسينات تقنية مستمرة.<br>
-        - التعاون الوثيق مع موظفي العيادة.
+        -  تنسیق مستمر مع فریق العیادة لضمان توافق المحتوى والوظائف مع الھویة المؤسسیة والأھداف
+التسویقیة.
+
     </td></tr>
     <!-- سيكيور الهندسية -->
     <tr><th colspan="2">شركة سيكيور الهندسية (مارس 2016 - مايو 2019)</th></tr>
@@ -549,7 +551,7 @@
     </td></tr>
     <tr><th>الإنجازات</th><td>
         - تحسين نشر البرمجيات، خفض وقت استكشاف الأخطاء بنسبة 25٪.<br>
-        - تنفيذ إجراءات أمنية قللت الاختراقات بنسبة 40٪.<br>
+        - تطبیق تدابیر أمن سیبراني قویة مما أدى إلى تقلیل الحوادث الأمنیة المتعلقة بالوصول غیر المصرح بھ.<br>
         - تدريب الموظفين على التقنيات الجديدة.<br>
         - التعاون مع فرق العمل على مشاريع تقنية المعلومات.<br>
         - تحليل بيانات السوق لتقديم تقارير قابلة للتنفيذ.<br>
@@ -589,7 +591,7 @@
     </td></tr>
     <tr><th>تنفيذ نظام تخطيط موارد المؤسسات (ERP)</th></tr>
     <tr><td>
-        - قاد نشر نظام ERP لمنظمة متوسطة الحجم، بما في ذلك تنسيق الموردين وتدريب الموظفين.
+        - قيادة نشر نظام ERP لمنظمة متوسطة الحجم، بما في ذلك تنسيق الموردين وتدريب الموظفين.
     </td></tr>
     <tr><th>تنفيذ نظام إدارة المستندات</th></tr>
     <tr><td>
@@ -603,7 +605,7 @@
     </td></tr>
     <tr><th>نظام تسجيل استخدام الطابعات والتحكم في التكاليف</th></tr>
     <tr><td>
-        - نفذ نظام تسجيل مركزي لتتبع استخدام الطابعات عبر الأقسام، بما في ذلك عدد الطباعات، نشاط المستخدم، واستهلاك الموارد.<br>
+        - تنفيذ نظام تسجيل مركزي لتتبع استخدام الطابعات عبر الأقسام، بما في ذلك عدد الطباعات، نشاط المستخدم، واستهلاك الموارد.<br>
         - تحديد أنماط الاستخدام العالي وتحسين سياسات الطباعة، مما أدى إلى تقليل تكاليف الورق والحبر.
     </td></tr>
 </table>
